crates/nash-parse/src/snapshots/nash_parse__type___tests__complex_model_msg.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\n{ model : Model, update : Msg -> Model -> Model }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 50,
        },
    },
    value: Record(
        [
            FieldType {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 8,
                        },
                    },
                    value: "model",
                },
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 11,
                        },
                        end: Position {
                            line: 1,
                            column: 16,
                        },
                    },
                    value: Type(
                        Region {
                            start: Position {
                                line: 1,
                                column: 11,
                            },
                            end: Position {
                                line: 1,
                                column: 16,
                            },
                        },
                        "Model",
                        [],
                    ),
                },
            },
            FieldType {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 18,
                        },
                        end: Position {
                            line: 1,
                            column: 24,
                        },
                    },
                    value: "update",
                },
                typ: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 27,
                        },
                        end: Position {
                            line: 1,
                            column: 48,
                        },
                    },
                    value: Lambda(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 27,
                                },
                                end: Position {
                                    line: 1,
                                    column: 30,
                                },
                            },
                            value: Type(
                                Region {
                                    start: Position {
                                        line: 1,
                                        column: 27,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 30,
                                    },
                                },
                                "Msg",
                                [],
                            ),
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 34,
                                },
                                end: Position {
                                    line: 1,
                                    column: 48,
                                },
                            },
                            value: Lambda(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 34,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 39,
                                        },
                                    },
                                    value: Type(
                                        Region {
                                            start: Position {
                                                line: 1,
                                                column: 34,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 39,
                                            },
                                        },
                                        "Model",
                                        [],
                                    ),
                                },
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 43,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 48,
                                        },
                                    },
                                    value: Type(
                                        Region {
                                            start: Position {
                                                line: 1,
                                                column: 43,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 48,
                                            },
                                        },
                                        "Model",
                                        [],
                                    ),
                                },
                            ),
                        },
                    ),
                },
            },
        ],
        None,
    ),
}
