crates/nash-parse/src/snapshots/nash_parse__type___tests__function_with_types.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\nInt -> String -> Bool"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 22,
        },
    },
    value: Lambda(
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
            value: Type(
                Region {
                    start: Position {
                        line: 1,
                        column: 1,
                    },
                    end: Position {
                        line: 1,
                        column: 4,
                    },
                },
                "Int",
                [],
            ),
        },
        Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 8,
                },
                end: Position {
                    line: 1,
                    column: 22,
                },
            },
            value: Lambda(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 14,
                        },
                    },
                    value: Type(
                        Region {
                            start: Position {
                                line: 1,
                                column: 8,
                            },
                            end: Position {
                                line: 1,
                                column: 14,
                            },
                        },
                        "String",
                        [],
                    ),
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 18,
                        },
                        end: Position {
                            line: 1,
                            column: 22,
                        },
                    },
                    value: Type(
                        Region {
                            start: Position {
                                line: 1,
                                column: 18,
                            },
                            end: Position {
                                line: 1,
                                column: 22,
                            },
                        },
                        "Bool",
                        [],
                    ),
                },
            ),
        },
    ),
}
