crates/nash-parse/src/snapshots/nash_parse__type___tests__named_type_int.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\nInt"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Type(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 4,
            },
        },
        "Int",
        [],
    ),
}
