crates/nash-parse/src/snapshots/nash_parse__type___tests__named_type_multi_qualified.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\nData.Map.Map"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 13,
        },
    },
    value: TypeQual {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 13,
            },
        },
        module: "Data.Map",
        name: "Map",
        args: [],
    },
}
