crates/nash-parse/src/snapshots/nash_parse__type___tests__named_type_string.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\nString"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 7,
        },
    },
    value: Type(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 7,
            },
        },
        "String",
        [],
    ),
}
