crates/nash-parse/src/snapshots/nash_parse__type___tests__parenthesized.snap
---
source: crates/nash-parse/src/type_.rs
description: "Code:\n\n(Int)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 2,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Type(
        Region {
            start: Position {
                line: 1,
                column: 2,
            },
            end: Position {
                line: 1,
                column: 5,
            },
        },
        "Int",
        [],
    ),
}
